# gmail-modify-mcp

./: .gitattributes  .gitignore  .mcp.json.example  LICENSE  README.md  gmail-modify-mcp  gmail-modify-mcp.bat  pyproject.toml
gmail_mcp_server/: __init__.py  auth.py  server.py
